<resources>
    <string name="app_name">Sokoban</string>
    <string name="login">Login</string>
    <string name="already_have_an_account">Already Have An Account?</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="create_a_new_account">Create a New Account</string>
    <string name="sign_up">Sign Up</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="username_or_email">Username or Email</string>
    <string name="new_password">New Password</string>
    <string name="reset_password">Reset Password</string>
    <string name="welcome_back">Welcome back</string>
    <string name="login_to_your_account">Login to your account</string>
    <string name="new_here">New here?</string>
    <string name="user_name">Username: %1$s</string>
    <string name="user_email">Email: %1$s</string>
    <string name="item_name">Item Name</string>
    <string name="item_description">Item Description</string>
    <string name="moves">moves</string>
</resources>