<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="viewModel"
            type="com.example.sokoban.ForgotPasswordActivity" />
    </data>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/forgot_password"
    android:textSize="24sp"
    android:textStyle="bold"
    android:layout_gravity="center_horizontal"
    android:layout_marginTop="55dp"
    android:layout_marginBottom="15dp" />

<EditText
    android:id="@+id/etUsernameOrEmail"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/username_or_email"
    android:inputType="textEmailAddress"
    android:layout_marginTop="155dp"
    android:layout_marginBottom="16dp" />

<EditText
    android:id="@+id/etNewPassword"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/new_password"
    android:inputType="textPassword"
    android:layout_marginBottom="16dp" />

<Button
    android:id="@+id/btnResetPassword"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="35dp"
    android:text="@string/reset_password" />

</LinearLayout>
</layout>

